// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailField it renders correctly with field.value + options + showAsLink 1`] = `
<div class="flex border-b border-40">
  <div class="w-1/4 py-4">
    <h4 class="font-normal text-80">
      Parent category
    </h4>
  </div>
  <div class="w-3/4 py-4">
    <div>
      <div>
        <!---->
      </div>
      <div>
        <!---->
      </div>
      <div>
        <router-link-stub to="[object Object]" class="no-underline dim text-primary font-bold">
          Three
        </router-link-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailField it renders correctly with field.value + options 1`] = `
<div class="flex border-b border-40">
  <div class="w-1/4 py-4">
    <h4 class="font-normal text-80">
      Parent category
    </h4>
  </div>
  <div class="w-3/4 py-4">
    <div>
      <div>
        <!---->
      </div>
      <div>
        <!---->
      </div>
      <div>
        <p class="text-left">Three</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailField it renders correctly without field.value 1`] = `
<div class="flex border-b border-40">
  <div class="w-1/4 py-4">
    <h4 class="font-normal text-80">
      Parent category
    </h4>
  </div>
  <div class="w-3/4 py-4">
    <p>—</p>
  </div>
</div>
`;
